2003-09-22  Andras Varga

	* cmdenv.cc/h: messageSent() signature change, see include/ChangeLog

2003-06-16  ------ omnetpp-2.3 released ------

2003-03-15  ------ omnetpp-2.3b2 released ------

2003-02-15  ------ omnetpp-2.3b1 released ------

2003-01-07  Andras Varga

	* new ini file options: 
	  autoflush=yes/no (default: no)
	    call fflush(stdout) after each event banner or status update;
	    affects both express and normal mode.
	  message-trace=yes/no (default: no)
	    log message sending (by send(),scheduleAt(), etc) and delivery
	    on standard output; effective only in normal mode

	* format of event banner slightly changed

2002-11-03  Andras Varga

	* cmdenv.cc: improved status display 

2002-10-20  Andras Varga

	* cmdenv.cc: revised omnetpp.ini entries understood by Cmdenv.
	A new entry was introduced to make it easier to switch between
	typical uses of Cmdenv.
	  express-mode=yes/no (default: no)
	Normal (non-express) mode is for debugging: detailed information 
	will be written	to the standard output (event banners, module output, 
	etc). Express mode can be used for long simulation runs: only 
	periodical status update is displayed about the progress of the 
	simulation.
	When in normal (non-express) mode, the following ini file entries 
	are taken into account:
	  module-messages=yes/no (default: yes)
	     - printing module ev<< output on/off (as before)
	  event-banners=yes/no (default: yes)
	     - printing event banners on/off; replaces verbose-simulation=
	When in express mode, these entries are used:
	  status-frequency=<integer> (default: 50000)
	     - print status update every n events (on today's computers, and
	     for a typical model, this will produce an update every few seconds,
	     perhaps a few times per second)
	  performance-display=yes/no (default: yes)
	     - print detailed performance status
	Obsoleted entries: display-update=, verbose-simulation=.

2002-10-08  Andras Varga
